--- a/Project test/css/style.css
+++ b/Project test/css/style.css
@@ -696,3 +696,6 @@
         margin-top: 32px;
         margin-left: -160px;
         position: absolute; }
+        @media only screen and (max-width: 480px) {
+          #contact .contText .rightCont .error-message {
+            margin-left: -143px; } }
